# djangoproject

./: .gitignore  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/middlewares/: maintenance.py
nginx/: nginx.conf
staticfiles/common/css/: styles.css
staticfiles/common/js/: script.js
templates/allauth/layouts/: base.html  entrance.html  manage.html
templates/common/: 403.html   404.html  500.html  base.html  maintenance.html
